--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@types/jwt-decode": "^2.2.1",
+    "chart.js": "^4.5.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.536.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
     "recharts": "^3.1.2",
     "zustand": "^5.0.7"
