--- a/package.json
+++ b/package.json
@@ -11,12 +11,10 @@
   },
   "dependencies": {
     "@types/jwt-decode": "^2.2.1",
-
+    "chart.js": "^4.5.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
-
-    "chart.js": "^4.5.0",
-
+    "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.536.0",
     "react": "^19.1.0",
